[gd_scene load_steps=22 format=3 uid="uid://bghg4cc4p4p7q"]

[ext_resource type="Script" uid="uid://b1e0wxulbydo6" path="res://scripts/Clase_artillero(player).gd" id="1_k2ov8"]
[ext_resource type="Texture2D" uid="uid://lh5m1qjorhm2" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_idle_anim_f0.png" id="2_3ikes"]
[ext_resource type="SpriteFrames" uid="uid://dxh5pfin1m673" path="res://sprites/duck.tres" id="2_3s22c"]
[ext_resource type="Texture2D" uid="uid://djcuuupgrvhvc" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_idle_anim_f1.png" id="3_3s22c"]
[ext_resource type="Texture2D" uid="uid://bl3wg16dgmwjy" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_idle_anim_f2.png" id="4_riq8v"]
[ext_resource type="Texture2D" uid="uid://cftnvi56d4yfq" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_idle_anim_f3.png" id="5_l7yje"]
[ext_resource type="Texture2D" uid="uid://dba1urktcbw3v" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_run_anim_f0.png" id="6_1ifcr"]
[ext_resource type="Texture2D" uid="uid://c1o56baymahcr" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_run_anim_f1.png" id="7_ghh1f"]
[ext_resource type="Texture2D" uid="uid://jxf46jnqkojx" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_run_anim_f2.png" id="8_x60dj"]
[ext_resource type="Texture2D" uid="uid://juh3ux2o2t1h" path="res://0x72_DungeonTilesetII_v1.7/frames/angel_run_anim_f3.png" id="9_j32pw"]
[ext_resource type="PackedScene" uid="uid://pyqdanv2cm78" path="res://escenas/Armas/gun.tscn" id="10_wdk6x"]
[ext_resource type="PackedScene" uid="uid://dbklotbaagktf" path="res://escenas/Modelos base (mapas y player)/escudo.tscn" id="11_5ur3q"]
[ext_resource type="Script" uid="uid://bqudqrfyhgh5x" path="res://scripts/barra_vida_entidad.gd" id="12_ixor2"]
[ext_resource type="PackedScene" uid="uid://bhpnqfwmwecy4" path="res://UI/ability_button.tscn" id="13_3ikes"]
[ext_resource type="Texture2D" uid="uid://b3l42thkpps7o" path="res://sprites/shield_resized_small.png" id="15_riq8v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qm0ti"]
radius = 13.0

[sub_resource type="SpriteFrames" id="SpriteFrames_5vuvg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3ikes")
}, {
"duration": 1.0,
"texture": ExtResource("3_3s22c")
}, {
"duration": 1.0,
"texture": ExtResource("4_riq8v")
}, {
"duration": 1.0,
"texture": ExtResource("5_l7yje")
}],
"loop": true,
"name": &"francotirador_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("6_1ifcr")
}, {
"duration": 0.5,
"texture": ExtResource("7_ghh1f")
}, {
"duration": 0.5,
"texture": ExtResource("8_x60dj")
}, {
"duration": 0.5,
"texture": ExtResource("9_j32pw")
}],
"loop": true,
"name": &"francotirador_run",
"speed": 8.0
}]

[sub_resource type="Curve" id="Curve_n2wyw"]
_data = [Vector2(0.00568181, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.494382), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_rbrud"]
offsets = PackedFloat32Array(0, 0.273333, 0.5, 0.766667, 0.98)
colors = PackedColorArray(0.805561, 0.264291, 0.170058, 1, 0.874807, 0.387638, 0.0171911, 1, 0.941257, 0.577198, 0, 1, 0.972549, 0.811765, 0.556863, 0, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_n2wyw"]
offsets = PackedFloat32Array(0, 0.16, 0.4, 0.766667, 1)
colors = PackedColorArray(0.0253431, 0.179135, 0.944003, 1, 0.152912, 0.526801, 0.813142, 1, 0.50319, 0.820657, 0.989624, 1, 0.807843, 0.929412, 0.996078, 0, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_8b7ct"]
offsets = PackedFloat32Array(0, 0.22, 0.493333, 0.78, 1)
colors = PackedColorArray(0, 0.361296, 0.129855, 1, 0.114389, 0.605875, 0.391132, 1, 0.1279, 0.94771, 0.221667, 1, 0.619608, 0.976471, 0.662745, 0, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_priority = 2.0
script = ExtResource("1_k2ov8")
textura = ExtResource("2_3s22c")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
position = Vector2(1, -2)
shape = SubResource("CircleShape2D_qm0ti")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["player"]]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_5vuvg")
animation = &"francotirador_idle"

[node name="Gun" parent="." groups=["player"] instance=ExtResource("10_wdk6x")]

[node name="Escudo" parent="." groups=["player"] instance=ExtResource("11_5ur3q")]
position = Vector2(1, -2)

[node name="ProgressBar" type="ProgressBar" parent="." groups=["player"]]
offset_left = -12.0
offset_top = -20.0
offset_right = 13.0
offset_bottom = -7.0
scale = Vector2(1, 0.35)
show_percentage = false
script = ExtResource("12_ixor2")
metadata/_edit_use_anchors_ = true

[node name="AuraDamage" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.25
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.8
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_n2wyw")
color_ramp = SubResource("Gradient_rbrud")

[node name="AuraSpeed" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.25
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.8
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_n2wyw")
color_ramp = SubResource("Gradient_n2wyw")

[node name="AuraHeal" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
lifetime = 0.25
emission_shape = 1
emission_sphere_radius = 15.0
gravity = Vector2(0, -600)
radial_accel_min = -50.0
radial_accel_max = -40.0
scale_amount_min = 0.8
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_n2wyw")
color_ramp = SubResource("Gradient_8b7ct")

[node name="DamageTimer" type="Timer" parent="."]

[node name="HealTimer" type="Timer" parent="."]

[node name="SpeedTimer" type="Timer" parent="."]

[node name="Polimorf" type="Timer" parent="."]
wait_time = 8.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ActivarDash" type="Timer" parent="."]
wait_time = 2.0

[node name="DamageTick" type="Timer" parent="."]

[node name="ReloadLabel" type="Label" parent="."]
visible = false
offset_left = -33.0
offset_top = -35.0
offset_right = 302.0
offset_bottom = 30.0
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 36
text = "Â¡CAMBIA DE ARMA!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -24.0
offset_right = -5.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
text = "
50"

[node name="RemainingHP" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -53.0
offset_right = 20.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 24
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -261.5
offset_right = 462.0
offset_bottom = 261.5
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
clip_contents = true
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -449.0
offset_top = -287.0
offset_right = -434.0
offset_bottom = -273.0
grow_horizontal = 0
grow_vertical = 0

[node name="AbilityButton" parent="Panel/HBoxContainer" instance=ExtResource("13_3ikes")]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" parent="Panel/HBoxContainer/AbilityButton" index="0"]
clip_contents = true
custom_minimum_size = Vector2(10, 10)
offset_left = 1.0
offset_top = 3.0
offset_right = 41.0
offset_bottom = 34.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_riq8v")

[node name="Counter" parent="Panel/HBoxContainer/AbilityButton/TextureRect" index="1"]
offset_top = -20.0

[connection signal="timeout" from="Polimorf" to="." method="_on_polimorf_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="ActivarDash" to="." method="_on_activar_dash_timeout"]

[editable path="Panel/HBoxContainer/AbilityButton"]
